--- a/Chrednichenko/home_assignment1/Task 2 v2/src/css/style.css
+++ b/Chrednichenko/home_assignment1/Task 2 v2/src/css/style.css
@@ -8,9 +8,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background: linear-gradient(to right red, blue);
 }
 
 .box {
-    
+    margin-top: 150px;
 }
